# hatch-fancy-pypi-readme

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml  main.yml  pypi-package.yml
src/hatch_fancy_pypi_readme/: __init__.py  __main__.py  _builder.py  _cli.py  _config.py  _fragments.py  _humanize_validation_errors.py  _setuptools.py  _substitutions.py  _validators.py  exceptions.py  hooks.py  pdm.py
src/hatch_fancy_readme/: hooks.py  plugin.py
tests/: __init__.py  conftest.py  example_changelog.md  example_pdm_pyproject.toml  example_pyproject.toml  example_text.md  test_builder.py  test_cli.py  test_config.py  test_end_to_end.py  test_fragments.py  test_humanize_validation_errors.py  test_pdm.py  test_substitutions.py  test_validators.py  utils.py
